# reliefo

./: .gitignore  README.md  pyproject.toml
.playwright-cli/: page-2026-06-07T08-42-26-680Z.yml
examples/: boca_del_rio.toml  catemaco.toml  coatepec.toml  coatzacoalcos.toml  cordoba.toml  huatusco.toml  minatitlan.toml  orizaba.toml  papantla.toml  perote.toml  poza_rica.toml  san_andres_tuxtla.toml  tuxpan.toml  veracruz.toml  veracruz_cities.geojson  xalapa.toml  xalapa_clean.toml  xico.toml  zongolica.toml
scripts/: render_all.sh  render_parallel.sh  render_remote.sh  render_streets.sh  social_export.py  veracruz_batch.py
src/reliefo/: __init__.py  _util.py  blender_render.py  charts.py  cli.py  compose.py  config.py  dem.py  labels.py  pipeline.py  streets.py  textures.py
src/xalapa_relieve/: bake_streets.py  blender_render.py  compose.py  config.py  extract_zones.py  fetch_dem.py  fetch_lidar.py  make_textures.py  pipeline.py
tests/: test_config.py  test_geo.py  test_textures.py
