[project]
name = "xalapa-relieve"
version = "0.1.0"
description = "Vintage 1953-survey-style raised-relief map of the Xalapa region, rendered in Blender from Copernicus GLO-30"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.6",
    "pillow>=12.2.0",
    "rasterio>=1.5.0",
    "requests>=2.34.2",
]

[project.scripts]
xalapa-relieve = "xalapa_relieve.pipeline:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/xalapa_relieve"]
